Prevent uk.ac.cam.ch.opsin.opsin-core from pulling in xom 1.2.5

--- a/oscar4-opsin/pom.xml
+++ b/oscar4-opsin/pom.xml
@@ -32,6 +32,12 @@
         <dependency>
             <groupId>uk.ac.cam.ch.opsin</groupId>
             <artifactId>opsin-core</artifactId>
+            <exclusions>
+                <exclusion>
+                   <groupId>xom</groupId>
+                   <artifactId>xom</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>commons-io</groupId>
