--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
     <groupId>uk.ac.cam.ch.wwmm.oscar</groupId>
     <artifactId>oscar4</artifactId>
-    <version>4.2-SNAPSHOT</version>
+    <version>4.2.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>oscar4-parent</name>
@@ -291,6 +291,13 @@
                 <configuration>
                     <argLine>-Xms512m -Xmx1024m</argLine>
                 </configuration>
+            </plugin>
+            <plugin>
+                  <groupId>org.apache.maven.plugins</groupId>
+                  <artifactId>maven-release-plugin</artifactId>
+                  <configuration>
+                     <tagNameFormat>@{project.version}</tagNameFormat>
+                  </configuration>
             </plugin>
         </plugins>
     </build>
