[maven-release-plugin] prepare for next development iteration

--- a/oscar4-chemnamedict/pom.xml
+++ b/oscar4-chemnamedict/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>uk.ac.cam.ch.wwmm.oscar</groupId>
         <artifactId>oscar4</artifactId>
-        <version>4.2.1</version>
+        <version>4.3.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>oscar4-chemnamedict</artifactId>
