--- a/oscar4-formatter/pom.xml
+++ b/oscar4-formatter/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>uk.ac.cam.ch.wwmm.oscar</groupId>
         <artifactId>oscar4</artifactId>
-        <version>4.2.2</version>
+        <version>4.3.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>oscar4-formatter</artifactId>
