--- a/pom.xml
+++ b/pom.xml
@@ -81,7 +81,8 @@
         <jexample.version>4.4-378</jexample.version>
         <mockito-core.version>1.10.19</mockito-core.version>
         <junit.version>4.12</junit.version>
-        <slf4j-log4j12.version>1.7.24</slf4j-log4j12.version>
+	<slf4j-log4j12.version>1.7.24</slf4j-log4j12.version>
+	<maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
     </properties>
 
     <scm>
@@ -282,7 +283,16 @@
     </dependencyManagement>
 
     <build>
-        <plugins>
+	    <plugins>
+            <plugin>
+                  <groupId>org.apache.maven.plugins</groupId>
+                  <artifactId>maven-compiler-plugin</artifactId>
+                  <version>${maven-compiler-plugin.version}</version>
+                  <configuration>
+                     <source>1.6</source>
+                     <target>1.6</target>
+                  </configuration>
+            </plugin>
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.17</version>
@@ -339,7 +349,7 @@
                 <artifactId>maven-pmd-plugin</artifactId>
                 <version>3.1</version>
                 <configuration>
-                    <targetJdk>1.5</targetJdk>
+                    <targetJdk>1.6</targetJdk>
                     <linkXRef>true</linkXRef>
                 </configuration>
             </plugin>
