--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <packaging>pom</packaging>
 
     <name>oscar4-parent</name>
-    <url>https://bitbucket.org/wwmm/oscar4</url>
+    <url>https://github.com/blueobelisk/oscar4</url>
 
     <developers>
         <developer>
@@ -86,9 +86,9 @@
     </properties>
 
     <scm>
-        <url>http://bitbucket.org/wwmm/oscar4/src</url>
-        <connection>scm:hg:http://bitbucket.org/wwmm/oscar4</connection>
-        <developerConnection>scm:hg:https://bitbucket.org/wwmm/oscar4</developerConnection>
+        <url>https://github.com/blueobelisk/oscar4</url>
+        <connection>scm:git:https://github.com/blueobelisk/oscar4</connection>
+        <developerConnection>scm:git:https://github.com/blueobelisk/oscar4</developerConnection>
     </scm>
 
     <prerequisites>
@@ -96,7 +96,7 @@
     </prerequisites>
 
     <issueManagement>
-        <url>https://bitbucket.org/wwmm/oscar4/issues</url>
+        <url>https://github.com/blueobelisk/oscar4/issues</url>
     </issueManagement>
 
     <modules>
