--- a/pom.xml
+++ b/pom.xml
@@ -349,6 +349,15 @@
 					</dependency>
 				</dependencies>
 			</plugin>
+                        <plugin>
+                                <groupId>org.apache.maven.plugins</groupId>
+                                <artifactId>maven-javadoc-plugin</artifactId>
+                                <version>3.2.0</version>
+                                <configuration>
+                                        <source>8</source>
+                                        <detectJavaApiLink>false</detectJavaApiLink>
+                                </configuration>
+                        </plugin>
 		</plugins>
 	</build>
 
@@ -370,11 +379,6 @@
 						</reports>
 					</reportSet>
 				</reportSets>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>2.9.1</version>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
