--- a/pom.xml
+++ b/pom.xml
@@ -355,7 +355,8 @@
                                 <version>3.2.0</version>
                                 <configuration>
                                         <source>8</source>
-                                        <detectJavaApiLink>false</detectJavaApiLink>
+					<detectJavaApiLink>false</detectJavaApiLink>
+					<failOnWarnings>false</failOnWarnings>
                                 </configuration>
                         </plugin>
 		</plugins>
