Avoid using custom properties for inter pom deps
This is causing issues with mvn release:prepare
See:
https://stackoverflow.com/questions/26858565/unable-to-resolve-project-version-in-child-pom-xml-from-parent-pom-xml

--- a/oscar4-chemnamedict/pom.xml
+++ b/oscar4-chemnamedict/pom.xml
@@ -14,7 +14,7 @@
     <dependencies>
 
         <dependency>
-            <groupId>${oscar.groupId}</groupId>
+            <groupId>uk.ac.cam.ch.wwmm.oscar</groupId>
             <artifactId>oscar4-core</artifactId>
         </dependency>
 
