--- a/oscar4-all/pom.xml
+++ b/oscar4-all/pom.xml
@@ -35,11 +35,11 @@
     <dependencies>
 
         <dependency>
-            <groupId>${oscar.groupId}</groupId>
+            <groupId>uk.ac.cam.ch.wwmm.oscar</groupId>
             <artifactId>oscar4-api</artifactId>
         </dependency>
         <dependency>
-            <groupId>${oscar.groupId}</groupId>
+            <groupId>uk.ac.cam.ch.wwmm.oscar</groupId>
             <artifactId>oscar4-data</artifactId>
         </dependency>
 
