--- a/oscar4-memmrecogniser/pom.xml
+++ b/oscar4-memmrecogniser/pom.xml
@@ -14,23 +14,23 @@
     <dependencies>
 
         <dependency>
-            <groupId>${oscar.groupId}</groupId>
+            <groupId>uk.ac.cam.ch.wwmm.oscar</groupId>
             <artifactId>oscar4-core</artifactId>
         </dependency>
         <dependency>
-            <groupId>${oscar.groupId}</groupId>
+            <groupId>uk.ac.cam.ch.wwmm.oscar</groupId>
             <artifactId>oscar4-chemnamedict</artifactId>
         </dependency>
         <dependency>
-            <groupId>${oscar.groupId}</groupId>
+            <groupId>uk.ac.cam.ch.wwmm.oscar</groupId>
             <artifactId>oscar4-obo</artifactId>
         </dependency>
         <dependency>
-            <groupId>${oscar.groupId}</groupId>
+            <groupId>uk.ac.cam.ch.wwmm.oscar</groupId>
             <artifactId>oscar4-tokenizer</artifactId>
         </dependency>
         <dependency>
-            <groupId>${oscar.groupId}</groupId>
+            <groupId>uk.ac.cam.ch.wwmm.oscar</groupId>
             <artifactId>oscar4-recogniser-core</artifactId>
         </dependency>
         <dependency>
