--- a/oscar4-obo/pom.xml
+++ b/oscar4-obo/pom.xml
@@ -15,11 +15,11 @@
     <dependencies>
 
         <dependency>
-            <groupId>${oscar.groupId}</groupId>
+            <groupId>uk.ac.cam.ch.wwmm.oscar</groupId>
             <artifactId>oscar4-core</artifactId>
         </dependency>
         <dependency>
-            <groupId>${oscar.groupId}</groupId>
+            <groupId>uk.ac.cam.ch.wwmm.oscar</groupId>
             <artifactId>oscar4-chemnamedict</artifactId>
         </dependency>
 
