--- a/pom.xml
+++ b/pom.xml
@@ -55,8 +55,6 @@
 	<properties>
 		<maven.min-version>3.0.4</maven.min-version>
 
-		<oscar.groupId>${project.groupId}</oscar.groupId>
-		<oscar.version>${project.version}</oscar.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <!-- Use:
@@ -117,54 +115,54 @@
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
-				<groupId>${oscar.groupId}</groupId>
+				<groupId>uk.ac.cam.ch.wwmm.oscar</groupId>
 				<artifactId>oscar4-core</artifactId>
-				<version>${oscar.version}</version>
+				<version>4.3.0-SNAPSHOT</version>
 			</dependency>
 			<dependency>
-				<groupId>${oscar.groupId}</groupId>
+				<groupId>uk.ac.cam.ch.wwmm.oscar</groupId>
 				<artifactId>oscar4-tokenizer</artifactId>
-				<version>${oscar.version}</version>
+				<version>4.3.0-SNAPSHOT</version>
 			</dependency>
 			<dependency>
-				<groupId>${oscar.groupId}</groupId>
+				<groupId>uk.ac.cam.ch.wwmm.oscar</groupId>
 				<artifactId>oscar4-recogniser-core</artifactId>
-				<version>${oscar.version}</version>
+				<version>4.3.0-SNAPSHOT</version>
 			</dependency>
 			<dependency>
-				<groupId>${oscar.groupId}</groupId>
+				<groupId>uk.ac.cam.ch.wwmm.oscar</groupId>
 				<artifactId>oscar4-memmrecogniser</artifactId>
-				<version>${oscar.version}</version>
+				<version>4.3.0-SNAPSHOT</version>
 			</dependency>
 			<dependency>
-				<groupId>${oscar.groupId}</groupId>
+				<groupId>uk.ac.cam.ch.wwmm.oscar</groupId>
 				<artifactId>oscar4-patternrecogniser</artifactId>
-				<version>${oscar.version}</version>
+				<version>4.3.0-SNAPSHOT</version>
 			</dependency>
 			<dependency>
-				<groupId>${oscar.groupId}</groupId>
+				<groupId>uk.ac.cam.ch.wwmm.oscar</groupId>
 				<artifactId>oscar4-chemnamedict</artifactId>
-				<version>${oscar.version}</version>
+				<version>4.3.0-SNAPSHOT</version>
 			</dependency>
 			<dependency>
-				<groupId>${oscar.groupId}</groupId>
+				<groupId>uk.ac.cam.ch.wwmm.oscar</groupId>
 				<artifactId>oscar4-obo</artifactId>
-				<version>${oscar.version}</version>
+				<version>4.3.0-SNAPSHOT</version>
 			</dependency>
 			<dependency>
-				<groupId>${oscar.groupId}</groupId>
+				<groupId>uk.ac.cam.ch.wwmm.oscar</groupId>
 				<artifactId>oscar4-opsin</artifactId>
-				<version>${oscar.version}</version>
+				<version>4.3.0-SNAPSHOT</version>
 			</dependency>
 			<dependency>
-				<groupId>${oscar.groupId}</groupId>
+				<groupId>uk.ac.cam.ch.wwmm.oscar</groupId>
 				<artifactId>oscar4-api</artifactId>
-				<version>${oscar.version}</version>
+				<version>4.3.0-SNAPSHOT</version>
 			</dependency>
 			<dependency>
-				<groupId>${oscar.groupId}</groupId>
+				<groupId>uk.ac.cam.ch.wwmm.oscar</groupId>
 				<artifactId>oscar4-data</artifactId>
-				<version>${oscar.version}</version>
+				<version>4.3.0-SNAPSHOT</version>
 			</dependency>
 			<dependency>
 				<groupId>uk.ac.cam.ch.opsin</groupId>
