--- a/oscar4-opsin/pom.xml
+++ b/oscar4-opsin/pom.xml
@@ -22,7 +22,7 @@
             <artifactId>oscar4-core</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.io7m.xom</groupId>
+            <groupId>xom</groupId>
             <artifactId>xom</artifactId>
         </dependency>
         <dependency>
