--- a/oscar4-api/pom.xml
+++ b/oscar4-api/pom.xml
@@ -60,7 +60,7 @@
             <artifactId>oscar4-recogniser-core</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.io7m.xom</groupId>
+            <groupId>xom</groupId>
             <artifactId>xom</artifactId>
         </dependency>
         <dependency>
