--- a/oscar4-chemnamedict/pom.xml
+++ b/oscar4-chemnamedict/pom.xml
@@ -23,7 +23,7 @@
             <artifactId>commons-lang</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.io7m.xom</groupId>
+            <groupId>xom</groupId>
             <artifactId>xom</artifactId>
         </dependency>
         <dependency>
