--- a/oscar4-core/pom.xml
+++ b/oscar4-core/pom.xml
@@ -14,7 +14,7 @@
     <dependencies>
 
         <dependency>
-            <groupId>com.io7m.xom</groupId>
+            <groupId>xom</groupId>
             <artifactId>xom</artifactId>
         </dependency>
         <dependency>
