--- a/oscar4-tokeniser/pom.xml
+++ b/oscar4-tokeniser/pom.xml
@@ -23,7 +23,7 @@
 		</dependency>
 
         <dependency>
-            <groupId>com.io7m.xom</groupId>
+            <groupId>xom</groupId>
             <artifactId>xom</artifactId>
         </dependency>
 
