--- a/pom.xml
+++ b/pom.xml
@@ -63,7 +63,7 @@
         -->
 		<opsin-core.version>2.4.0</opsin-core.version>
 		<opsin-inchi.version>${opsin-core.version}</opsin-inchi.version>
-		<xom.version>1.2.10</xom.version>
+		<xom.version>1.3.5</xom.version>
 		<log4j2.version>2.13.3</log4j2.version>
 		<icu4j.version>67.1</icu4j.version>
 		<poi.version>4.1.2</poi.version>
@@ -181,7 +181,7 @@
 				</exclusions>
 			</dependency>
 			<dependency>
-				<groupId>com.io7m.xom</groupId>
+				<groupId>xom</groupId>
 				<artifactId>xom</artifactId>
 				<version>${xom.version}</version>
 			</dependency>
