Disable doc linting

--- a/pom.xml
+++ b/pom.xml
@@ -348,6 +348,7 @@
                                 <configuration>
                                         <source>8</source>
 					<detectJavaApiLink>false</detectJavaApiLink>
+                                        <doclint>none</doclint>
                                 </configuration>
                         </plugin>
 		</plugins>
