--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
@@ -12,7 +10,7 @@
 
 	<groupId>uk.ac.cam.ch.wwmm.oscar</groupId>
 	<artifactId>oscar4</artifactId>
-	<version>4.3.0-SNAPSHOT</version>
+	<version>5.0.0</version>
 	<packaging>pom</packaging>
 
 	<name>oscar4-parent</name>
@@ -89,7 +87,8 @@
 		<url>https://github.com/blueobelisk/oscar4</url>
 		<connection>scm:git:https://github.com/blueobelisk/oscar4</connection>
 		<developerConnection>scm:git:https://github.com/blueobelisk/oscar4</developerConnection>
-	</scm>
+	  <tag>5.0.0</tag>
+  </scm>
 
 	<issueManagement>
 		<url>https://github.com/blueobelisk/oscar4/issues</url>
@@ -117,52 +116,52 @@
 			<dependency>
 				<groupId>uk.ac.cam.ch.wwmm.oscar</groupId>
 				<artifactId>oscar4-core</artifactId>
-				<version>4.3.0-SNAPSHOT</version>
+				<version>5.0.0</version>
 			</dependency>
 			<dependency>
 				<groupId>uk.ac.cam.ch.wwmm.oscar</groupId>
 				<artifactId>oscar4-tokenizer</artifactId>
-				<version>4.3.0-SNAPSHOT</version>
+				<version>5.0.0</version>
 			</dependency>
 			<dependency>
 				<groupId>uk.ac.cam.ch.wwmm.oscar</groupId>
 				<artifactId>oscar4-recogniser-core</artifactId>
-				<version>4.3.0-SNAPSHOT</version>
+				<version>5.0.0</version>
 			</dependency>
 			<dependency>
 				<groupId>uk.ac.cam.ch.wwmm.oscar</groupId>
 				<artifactId>oscar4-memmrecogniser</artifactId>
-				<version>4.3.0-SNAPSHOT</version>
+				<version>5.0.0</version>
 			</dependency>
 			<dependency>
 				<groupId>uk.ac.cam.ch.wwmm.oscar</groupId>
 				<artifactId>oscar4-patternrecogniser</artifactId>
-				<version>4.3.0-SNAPSHOT</version>
+				<version>5.0.0</version>
 			</dependency>
 			<dependency>
 				<groupId>uk.ac.cam.ch.wwmm.oscar</groupId>
 				<artifactId>oscar4-chemnamedict</artifactId>
-				<version>4.3.0-SNAPSHOT</version>
+				<version>5.0.0</version>
 			</dependency>
 			<dependency>
 				<groupId>uk.ac.cam.ch.wwmm.oscar</groupId>
 				<artifactId>oscar4-obo</artifactId>
-				<version>4.3.0-SNAPSHOT</version>
+				<version>5.0.0</version>
 			</dependency>
 			<dependency>
 				<groupId>uk.ac.cam.ch.wwmm.oscar</groupId>
 				<artifactId>oscar4-opsin</artifactId>
-				<version>4.3.0-SNAPSHOT</version>
+				<version>5.0.0</version>
 			</dependency>
 			<dependency>
 				<groupId>uk.ac.cam.ch.wwmm.oscar</groupId>
 				<artifactId>oscar4-api</artifactId>
-				<version>4.3.0-SNAPSHOT</version>
+				<version>5.0.0</version>
 			</dependency>
 			<dependency>
 				<groupId>uk.ac.cam.ch.wwmm.oscar</groupId>
 				<artifactId>oscar4-data</artifactId>
-				<version>4.3.0-SNAPSHOT</version>
+				<version>5.0.0</version>
 			</dependency>
 			<dependency>
 				<groupId>uk.ac.cam.ch.opsin</groupId>
