--- a/oscar4-api/pom.xml
+++ b/oscar4-api/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>uk.ac.cam.ch.wwmm.oscar</groupId>
         <artifactId>oscar4</artifactId>
-        <version>5.0.1</version>
+        <version>5.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>oscar4-api</artifactId>
