--- a/oscar4-memmrecogniser-train/pom.xml
+++ b/oscar4-memmrecogniser-train/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>uk.ac.cam.ch.wwmm.oscar</groupId>
         <artifactId>oscar4</artifactId>
-        <version>5.0-SNAPSHOT</version>
+        <version>5.1.0</version>
     </parent>
 
     <artifactId>oscar4-memmrecogniser-train</artifactId>
