--- a/pom.xml
+++ b/pom.xml
@@ -68,9 +68,6 @@
 		<opennlp-maxent.version>3.0.3</opennlp-maxent.version>
 		<opennlp-tools.version>1.9.4</opennlp-tools.version>
 		<automaton.version>1.11-8</automaton.version>
-		<slf4j-api.version>1.7.32</slf4j-api.version>
-		<slf4j-simple.version>1.7.32</slf4j-simple.version>
-		<slf4j-log4j12.version>1.7.32</slf4j-log4j12.version>
 		<commons-lang.version>2.6</commons-lang.version>
 		<commons-io.version>2.11.0</commons-io.version>
 		<commons-discovery.version>20040218.194635</commons-discovery.version>
@@ -184,16 +181,21 @@
 				<artifactId>xom</artifactId>
 				<version>${xom.version}</version>
 			</dependency>
-			<dependency>
-				<groupId>org.slf4j</groupId>
-				<artifactId>slf4j-log4j12</artifactId>
-				<version>${slf4j-log4j12.version}</version>
+                        <dependency>
+                                <groupId>org.apache.logging.log4j</groupId>
+                                <artifactId>log4j-api</artifactId>
+                                <version>${log4j2.version}</version>
 			</dependency>
-			<dependency>
-				<groupId>org.apache.logging.log4j</groupId>
-				<artifactId>log4j-1.2-api</artifactId>
-				<version>${log4j2.version}</version>
-			</dependency>
+                        <dependency>
+                                <groupId>org.apache.logging.log4j</groupId>
+                                <artifactId>log4j-core</artifactId>
+                                <version>${log4j2.version}</version>
+                        </dependency>
+                        <dependency>
+                                <groupId>org.apache.logging.log4j</groupId>
+                                <artifactId>log4j-slf4j-impl</artifactId>
+                                <version>${log4j2.version}</version>
+                        </dependency>
 			<dependency>
 				<groupId>com.ibm.icu</groupId>
 				<artifactId>icu4j</artifactId>
@@ -218,16 +220,6 @@
 				<groupId>dk.brics.automaton</groupId>
 				<artifactId>automaton</artifactId>
 				<version>${automaton.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.slf4j</groupId>
-				<artifactId>slf4j-api</artifactId>
-				<version>${slf4j-api.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.slf4j</groupId>
-				<artifactId>slf4j-simple</artifactId>
-				<version>${slf4j-simple.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>commons-lang</groupId>
