[maven-release-plugin] prepare release 5.2.0

--- a/oscar4-core/pom.xml
+++ b/oscar4-core/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>uk.ac.cam.ch.wwmm.oscar</groupId>
         <artifactId>oscar4</artifactId>
-        <version>5.2-SNAPSHOT</version>
+        <version>5.2.0</version>
     </parent>
 
     <artifactId>oscar4-core</artifactId>
