--- a/oscar4-data/pom.xml
+++ b/oscar4-data/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>uk.ac.cam.ch.wwmm.oscar</groupId>
 		<artifactId>oscar4</artifactId>
-		<version>5.2.0</version>
+		<version>5.3-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>oscar4-data</artifactId>
