--- a/oscar4-recogniser-core/pom.xml
+++ b/oscar4-recogniser-core/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>uk.ac.cam.ch.wwmm.oscar</groupId>
         <artifactId>oscar4</artifactId>
-        <version>5.2.1</version>
+        <version>5.3-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
